use varuint-bitcoin

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "ecurve": "^1.0.0",
     "randombytes": "^2.0.1",
     "typeforce": "^1.6.2",
+    "varuint-bitcoin": "^1.0.4",
     "wif": "^2.0.1"
   },
   "devDependencies": {
