--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "create-hash": "^1.1.0",
     "create-hmac": "^1.1.3",
     "ecurve": "^1.0.0",
+    "inherits": "^2.0.1",
     "randombytes": "^2.0.1",
     "typeforce": "^1.6.2",
     "wif": "^2.0.1"
